added report ctrl
